Implementing persisting categories to file tree and database